Fix carousel buttons on small screens

--- a/branding/src/index/picture-carousel.scss
+++ b/branding/src/index/picture-carousel.scss
@@ -60,6 +60,13 @@
     right: 1em;
 }
 
+@media (max-width: 650px) {
+    .vbp-picture-carousel-button {
+        top: unset;
+        bottom: 20%;
+    }
+}
+
 .vbp-picture-carousel-info {
     position: absolute;
     top: 1em;
